// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultipleFileUploadInfo renders custom class names 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-multiple-file-upload__info test"
  >
    Foo
  </div>
</DocumentFragment>
`;

exports[`MultipleFileUploadInfo renders with expected class names 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-multiple-file-upload__info"
  >
    Foo
  </div>
</DocumentFragment>
`;
